WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151537
Font selection should not consult font-variant property
https://bugs.webkit.org/show_bug.cgi?id=151537
Summary
Font selection should not consult font-variant property
Myles C. Maxfield
Reported
2015-11-21 21:00:42 PST
Font selection should not consult font-variant property
Attachments
Patch
(8.56 KB, patch)
2015-11-21 21:05 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(17.04 KB, patch)
2015-11-21 21:28 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(21.87 KB, patch)
2015-11-21 22:00 PST
,
Myles C. Maxfield
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2015-11-21 21:05:22 PST
Created
attachment 266039
[details]
Patch
Myles C. Maxfield
Comment 2
2015-11-21 21:13:39 PST
I should also remove the value-list stuff, since it will never be consulted.
Myles C. Maxfield
Comment 3
2015-11-21 21:28:08 PST
Created
attachment 266040
[details]
Patch
Myles C. Maxfield
Comment 4
2015-11-21 22:00:19 PST
Created
attachment 266042
[details]
Patch
Myles C. Maxfield
Comment 5
2015-11-22 09:06:42 PST
Committed
r192732
: <
http://trac.webkit.org/changeset/192732
>
Radar WebKit Bug Importer
Comment 6
2015-12-04 14:40:22 PST
<
rdar://problem/23767613
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug